v5.5.1
- Updated - /views/ folder params inline documentation
- Updated - core/site-logo is-style-rounded CSS
- Updated - 404 page base design improvements + added big title and "Home" button
- Updated - Header columns adjustments and Navigation remove ID to allow usage of core/page-list fallback
- Updated - Page List fallback max pages changed to 3 and remove "ul" tag when used in Navigation
- Updated - Navigation blocks wp_kses to wp_kses_post
- Updated - core/page-list to use Navigation link markup and styles (not sure why WP complicates things)
- Updated - Allow inline CSS for mark formatting on text blocks (headings, paragraph, lists etc)
- Updated - Gutenberg restricted blocks (skipped by our Styles extension) list
- Updated - core/comment-template to load Utilities CSS only if there are comments
- Updated - core/latest-comments and core/latest-posts change render function earlier using metadata filter (rather than render)
- Fixed - ANR -> Captcha 4WP double captcha containers on comment form.
- Fixed - core/cover bug with solid color only background style
- Fixed - Gutteberg Advanced CSS bug in editor when replacing selector with block class
- Fixed - Gutenberg Advanced CSS bug when custom CSS was applied for sidebar block navigation 
- Added - core/code default styleing
- Added - core/tag-cloud default styleing
- Added - missing "sticky-top" class in gutenberg block Advanced class suggestions

v5.5.0
- Fixed - Grid gap default to 1 rem (--wp--custom--gutter variable)

v5.4.9
- Updated - Get WP core colors from 'default' instead of deprecated 'core' ( [ 'settings', 'color', 'palette', 'default' ] )
- Updated - Home starter content
- Updated - core/latest-posts and core/post-template grid classes
- Updated - core/table and core/calendar to load table CSS
- Updated - core/search width styles output
- Removed - Containers CSS - fully updated to Gutenberg (not needed anymore)
- Removed - Cover block inner container class